--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,38 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.header {
+  text-align: center;
+  background-color: #282c34;
+  min-height: 25vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+}
+
+.section {
+  text-align: center;
+  background-color: #312E40;
+  min-height: 80vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 8vh 0;
+  color: white;
+}
+
+.Navbar {
+  font-size: 1.2em;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 5em;
+}
+
+.nav-link{
+  text-decoration: none;
+  color: inherit;
+  margin: 0.5em;
 }
