--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
 
 .header {
   text-align: center;
-  background-color: #282c34;
+  background-color: #312E40;
   min-height: 25vh;
   display: flex;
   flex-direction: column;
