Improved shop styling

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,32 @@ h1,h2,h3{
   font-family: 'Courgette', cursive;
 }
 
+button{
+  color: #312E40;
+  background-color: #d2ccf3;
+  padding: 1em;
+  border: none;
+  border-radius: 0.6em;
+  transition-duration: 0.3s; 
+}
+
+button:hover{
+  background-color: #312E40;
+  color: #d2ccf3;
+  cursor: pointer;
+}
+
+.shop-items{
+  width:100vw;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.shop-items div{
+  flex:1;
+}
 
 .header {
   text-align: center;
