--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,10 @@ button{
   transition-duration: 0.3s; 
 }
 
+p{
+  opacity: 0.8;
+}
+
 button:hover{
   background-color: var(--dark-color);
   color: var(--brand-color);
@@ -90,8 +94,17 @@ button:hover{
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 8vh 0;
+  padding: 10vh 0;
   color: var(--light-color);
+}
+
+.goal-intro{
+  text-align: left;
+}
+
+.divided{
+  display:flex;
+  gap: 20em
 }
 
 .Navbar {
@@ -129,7 +142,16 @@ button:hover{
   color: turquoise;
 }
 
-.description{
-  opacity: 0.8;
+
+.inventory-description p{
+  text-align: left;
+  margin: 0.2em 0 ;
+}
+
+.inventory-item{
+  display:flex;
+  flex-direction: row;
+  align-items:center;
+  gap:1em;
 }
 
