--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 
   --brand-color: #E57A44;
   --dark-color: #5b2e6b;
+  --dark-rgba: rgba(91, 46, 107, 0.9);
   --mid-color: #DBC6BB;
   --light-color: #FAF5FF;
   --offwhite-color: #f1e4de; 
@@ -86,13 +87,11 @@ button.cross:hover{
 p{
   opacity: 0.8;
   font-size: 1.2em;
-
 }
 
 a{
   text-decoration: none;
 }
-
 
 
 .branding{
@@ -168,6 +167,35 @@ section {
   padding: 15vh 10vw;
 }
 
+section.dark{
+  background: var(--dark-color);
+  color: var(--light-color);
+}
+
+section.dark.magic-img{
+  background:linear-gradient(0deg, var(--dark-rgba), var(--dark-rgba)), url(/src/Img/magic.jpg);
+  background-size:cover;
+  background-position: center center;
+}
+section.dark.map-img{
+  background:linear-gradient(0deg, var(--dark-rgba), var(--dark-rgba)), url(/src/Img/map.jpg);
+  background-size:cover;
+  background-position: center center;
+}
+section.dark.table-img{
+  background:linear-gradient(0deg, var(--dark-rgba), var(--dark-rgba)), url(/src/Img/table.jpg);
+  background-size:cover;
+  background-position: center center;
+}
+
+.call-to-action button{
+  font-size: 1.2em;
+}
+.call-to-action button:hover{
+  font-size: 1.2em;
+  background-color: var(--dark-color);
+  color: var(--brand-color);
+}
 
 .bonus-list{
   text-align: left;
@@ -222,11 +250,12 @@ section {
 }
 
 .currency-display{
+  margin: 0 1em;
   display:flex;
+  font-weight: 600;
   align-items: center;
   gap: 1em;
   font-size: 0.8em;
- 
 }
 
 .big{
