Adding to and removing from inventory

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
 :root {
 
   --brand-color: #E57A44;
-  --dark-color: #5b2e6b;
+  --dark-color: #30047d;
+  --old-color: #5b2e6b;
   --dark-rgba: rgba(91, 46, 107, 0.9);
   --mid-color: #DBC6BB;
   --light-color: #FAF5FF;
