--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ body {
   min-height: 100vh;
 }
 
+
 h1,h2,h3{
   font-family: 'Courgette', cursive;
 }
@@ -108,6 +109,17 @@ a{
 
 .shop-items div{
   flex:1;
+}
+
+.shoppe-stock{
+  display: flex;;
+}
+.shop-item{
+  width: 15vw;
+  background:rgba(91, 46, 107, 0.1);
+  border-radius: 2em;
+  padding:2em 1em ;
+  margin:2em;
 }
 
 .recipe-list{
